# AsciiArt

./: README.md
AsciiArt/: CMakeLists.txt
AsciiArt/src/: CMakeLists.txt  imageTransformer.cpp  main.cpp
AsciiArt/src/asciiArtGenerator/: asciiArtGenerator.cpp
AsciiArt/src/include/: asciiArtGenerator.h  imageTransformer.h
AsciiArt/test/Google_tests/: CMakeLists.txt  asciiArtGeneratorTest.cpp
